# scrape_notifier

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  alembic.ini  config-template.toml  fly.toml  get_users.py  pyproject.toml
.github/: run-pre-commit.yml
.github/workflows/: run-pre-commit.yml  run-tests.yml
scrape_notifier/: __main__.py  config.py  health.py  main.py  model.py  scrape.py  setup.py  utils.py
scrape_notifier/migrations/: env.py
scrape_notifier/migrations/versions/: 1e8c09d980d6_add_date_to_specify_target_at_date.py  3d6e419ecf47_rename_user_id_add_joined_date.py  3d8af65cd7df_add_notification_history_table.py  d31eb778fef1_add_notification_history_table.py  eb3cfcf05206_create_basic_users_table.py
tests/: test_exponential_backoff.py
