[tool.poetry]
name = "scrape_notifier"
version = "0.1.0"
description = "A web-scraper-telegram-bot-combo for notifiying you about free appointments."
authors = ["Jannis Kowalick <jannisko99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
python-telegram-bot = "^13.13"
toml = "^0.10.2"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
click = "^8.1.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
mypy = "^0.971"
types-requests = "^2.28.8"
types-toml = "^0.10.8"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape-notifier = "scrape_notifier.__main__:cli"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = [
    "scrape_notifier/migrations",
]
check_untyped_defs = true

[[tool.mypy.overrides]]
# as of sqlalchemy<2 it is still largely untyped. This could be fixed with version 2.0
module = [
    "sqlalchemy",
    "sqlalchemy.orm",
]
ignore_missing_imports = true
